# mrs_open_vins_core

./: .gitignore  .gitman.yml  README.md
ros_packages/mrs_open_vins_core/: CMakeLists.txt  package.xml
ros_packages/mrs_open_vins_core/calibration/: mv_25003671.yaml
ros_packages/mrs_open_vins_core/config/bluefox_imu_mv_25003631/: estimator_config.yaml  kalibr_imucam_chain.yaml
ros_packages/mrs_open_vins_core/config/bluefox_imu_simulation/: estimator_config.yaml
ros_packages/mrs_open_vins_core/config/bluefox_mavros_simulation/: kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros_packages/mrs_open_vins_core/config/mavros/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros_packages/mrs_open_vins_core/config/oak_d/: estimator_config.yaml  kalibr_imu_chain.yaml
ros_packages/mrs_open_vins_core/config/oak_d_pro_w/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros_packages/mrs_open_vins_core/config/realworld_bluefox_front/: estimator_config.yaml  kalibr_imucam_chain.yaml
ros_packages/mrs_open_vins_core/config/robofly/: estimator_config.yaml  kalibr_imu_chain.yaml  (+2 more)
ros_packages/mrs_open_vins_core/launch/: bluefox.launch  bluefox_mv_25003631.launch  mavros.launch  oak_d_pro_w.launch  realworld_bluefox_front.launch  robofly.launch  rviz.launch  simulation_bluefox.launch  simulation_bluefox_mavros.launch  simulation_unreal.launch  t265.launch
ros_packages/mrs_open_vins_core/rviz/: default.rviz
ros_packages/mrs_open_vins_core/scripts/: refactor_rviz_config.sh
ros_packages/mrs_open_vins_core/tmux/: session.yml
(+24 files in other folders)
