<?xml version="1.0"?>
<package format="2">

  <name>mrs_open_vins_core</name>
  <version>1.0.0</version>
  <description>The MRS open_vins core metapackage</description>

  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>
  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>

  <depend>ov_core</depend>
  <depend>ov_eval</depend>
  <depend>ov_init</depend>
  <depend>ov_msckf</depend>
  <depend>ov_repub</depend>
  <depend>mrs_open_vins_estimator_plugin</depend>
  <depend>vins_republish</depend>

</package>
